--- a/translations/kangyur/translations/075-003_toh345-the_exemplary_tale_about_a_sow.xml
+++ b/translations/kangyur/translations/075-003_toh345-the_exemplary_tale_about_a_sow.xml
@@ -30,7 +30,7 @@
       </titleStmt>
 
       <editionStmt>
-                <edition>v 1.0.17 <date>2024</date>
+                <edition>v 1.0.18 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -200,6 +200,9 @@
                 <change who="#celso" when="2024-05-16T17:20:14.079Z" type="text-version" status="1.0.17" xml:id="UT22084-075-003-243">
                     <desc>change to glossary entry</desc>
                 </change>
+                <change who="#andre" when="2024-06-26T16:57:16.303Z" type="text-version" status="1.0.18" xml:id="UT22084-075-003-245">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
   </teiHeader>
@@ -351,9 +354,7 @@
               513–51.</note> In a somewhat different wording, the same verse is voiced by a god from
             Śuddhāvāsa heaven in the <title xml:lang="Pi-Ltn">Mahāsamaya Sutta</title>, which is the
             Pali counterpart to the <title xml:lang="Sa-Ltn">Mahāsamāja Sūtra</title> and likewise
-            an important text that was recited for protective purposes over the centuries.
-            
-            <note place="end" xml:id="UT22084-075-003-24"> This sutta is found in the important Pali
+            an important text that was recited for protective purposes over the centuries.<note place="end" xml:id="UT22084-075-003-24"> This sutta is found in the important Pali
               collection of <foreign xml:lang="Pi-Ltn" type="term">paritta</foreign> texts, the
                 <title xml:lang="Pi-Ltn">Catubhāṇavāra</title> (Piyadassi Thera [1975]: 70–81), and
               it is among the few Pali texts that were translated into Tibetan by the Sri Lankan
@@ -361,24 +362,17 @@
               the fourteenth century (<ref rend="pending" target="https://read.84000.co/translation/toh34.html">Toh 34</ref>). The Pali verse
               in the <title xml:lang="Pi-Ltn">Mahāsamayasutta</title> (DN II 332) and the shorter
                 <title xml:lang="Pi-Ltn">Samayasutta</title> (SN I 37) reads as follows:
-              
                 <lg>                
                   <l>
                                     <foreign xml:lang="Pi-Ltn" type="quote">Ye keci buddhaṃ saraṇaṃ gatāse,</foreign> </l>
-               
                   <l>
                                     <foreign xml:lang="Pi-Ltn" type="quote">Na te gamissanti apāyabhūmim;</foreign> </l>
-               
-                  
                   <l>
                                     <foreign xml:lang="Pi-Ltn" type="quote">Pahāya mānusaṃ deham,</foreign> </l>
                   <l>
                                     <foreign xml:lang="Pi-Ltn" type="quote">Devakāyam paripūressanti.</foreign> </l>
                   </lg>
-                        </note> 
-                  
-            
-            These attestations of the verse are considerably
+                        </note> These attestations of the verse are considerably
             older than the first citation from <title xml:lang="en">The Exemplary Tale About a
               Sow</title> by Śāntideva in the eighth century <hi rend="small-caps">ce</hi>, and it
             seems, therefore, that the verse had a life of its own before it was adapted to this
@@ -503,8 +497,8 @@
                         <ref cRef="F.289.b" type="folio" xml:id="UT22084-075-003-148"/>Homage to the
             Three Jewels!</p>
           <lb/>
-          <p tid="34">Thus did I hear at one time. The Blessed One was dwelling at Śrāvastī in
-            Jetavana, in Anāthapiṇḍada’s Park.<note place="end" xml:id="UT22084-075-003-47"> The
+          <p tid="34">Thus did I hear at one time. The Blessed One was dwelling in Śrāvastī, in
+            Jetavana, Anāthapiṇḍada’s Park.<note place="end" xml:id="UT22084-075-003-47"> The
               Sanskrit text as preserved in the <title xml:lang="Sa-Ltn">Divyāvadāna</title>
               collection does not have this introduction (<foreign xml:lang="Sa-Ltn" type="term">nidāna</foreign>) which states the location of the teaching. It also lacks the
               following sentence that describes the Buddha addressing the monks, and it immediately
@@ -1186,20 +1180,7 @@
                 (ca. 742–800), Tri Desongtsen (r. 800–815), and Tri Ralpachen (ca. 806–838) </p>
                             </note>
                         </gloss>
-                    </item>
-          <item>
-                        <gloss type="person" xml:id="UT22084-075-003-169">
-                            <term type="translationMain">Anāthapiṇḍada</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">anāthapiṇḍada</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mgon med zas sbyin</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">མགོན་མེད་ཟས་སྦྱིན།</term>
-                            <note type="definition" rend="override">
-                                <p>A wealthy patron-householder from Śrāvastī who donated
-                Jetavana to the Buddha Śākyamuni and his monastic community.</p>
-                            </note>
-                        </gloss>
-                    </item>
-          
+                    </item>          
           <item>
                         <gloss type="place" xml:id="UT22084-075-003-171">
                             <term type="translationMain">Caitraratha grove</term>
@@ -1313,32 +1294,11 @@
                         </gloss>
                     </item>
           <item>
-                        <gloss type="place" xml:id="UT22084-075-003-179">
-                            <term type="translationMain">Jetavana</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">jetavana</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
-                            <note type="definition">
-                                <p>“Jeta’s Grove.” A grove to the south of the city of Śrāvastī.
-                It was gifted to the Buddha and the monastic community by the merchant Anāthapiṇḍada
-                after he purchased it from Prince Jeta by covering almost the entire grove with gold
-                coins. The part that he could not cover was donated by Prince Jeta, who was
-                impressed by Anāthapiṇḍada’s devotion and had a grand entrance built there with the
-                sum of Anāthapiṇḍada’s gold coins.</p>
-                            </note>
-                        </gloss>
-                    </item>
-          <item>
-                        <gloss type="place" xml:id="UT22084-075-003-180">
-                            <term type="translationMain">Anāthapiṇḍada’s park</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">anātha­piṇḍadārāma</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mgon med zas sbyin gyi kun dga’ ra ba</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
-                            <note type="definition">
-                                <p>A park to the south of the city of Śrāvastī. It was gifted to
-                the Buddha and the monastic community by the merchant Anāthapiṇḍada, who had it
-                prepared with several facilities, including the Buddha’s “fragrant lodge” (<foreign xml:lang="Sa-Ltn" type="term">gandhakuṭī</foreign>).</p>
-                            </note>
+                        <gloss xml:id="UT22084-075-003-244" type="place" mode="match">
+                            <term type="translationMain">Jetavana, Anāthapiṇḍada’s Park</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         </gloss>
                     </item>
           <item>
