--- a/translations/kangyur/translations/072-030_toh330-the_shorter_devata_sutra.xml
+++ b/translations/kangyur/translations/072-030_toh330-the_shorter_devata_sutra.xml
@@ -24,7 +24,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-030-195">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.8 <date>2024</date>
+                <edition>v 1.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -185,6 +185,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-05-29T14:11:11.074Z" type="text-version" status="1.0.8" xml:id="UT22084-072-030-210">
                     <desc>updated pending links.</desc>
+                </change>
+                <change who="#andre" when="2024-06-26T17:26:05.65Z" type="text-version" status="1.0.9" xml:id="UT22084-072-030-212">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -444,8 +447,7 @@
                         <ref cRef="F.258.b" type="folio" xml:id="UT22084-072-030-180"/> Homage to all buddhas and bodhisattvas.</p>
                                         <lb/>
                                         <p tid="27">Thus did I hear at one time. The Blessed One was
-                                                staying at Jetavana, Anāthapiṇḍada’s park at
-                                                Śrāvastī, <ref cRef="F.259.a" type="folio" xml:id="UT22084-072-030-181"/> when a divine being<note place="end" xml:id="UT22084-072-030-77"> Skt.
+                                                staying in Śrāvastī, in the Jetavana, Anāthapiṇḍada’s Park, <ref cRef="F.259.a" type="folio" xml:id="UT22084-072-030-181"/> when a divine being<note place="end" xml:id="UT22084-072-030-77"> Skt.
                                                   (Mat.) has, in addition, <foreign xml:lang="Sa-Ltn" type="quote">atikrāṁtavarṇā
                                                   atikrāntāyāṃ rātryāṃ</foreign> (“of beautiful appearance, when the night was through”).</note>
                                                 approached the Blessed One, paid homage by bowing
@@ -1195,23 +1197,6 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-072-030-174">
-                                                  <term type="translationMain">Anāthapiṇḍada</term>
-                                                  <term status="verified" xml:lang="Bo-Ltn" n="1">mgon med zas sbyin </term>
-                                                  <term xml:lang="bo" n="1">མགོན་མེད་ཟས་སྦྱིན།</term>
-                                                  <term status="verified" xml:lang="Sa-Ltn">anāthapiṇḍada</term>
-                                                  <note type="definition" rend="override">
-                                <p>Anāthapiṇḍada was a
-                                                  wealthy merchant in the town of Śrāvastī. Famous
-                                                  for his generosity to the poor, he became a patron
-                                                  of the Buddha Śākyamuni. He bought
-                                                  Jetavana (Jeta’s Grove) from Prince Jeta and built
-                                                  a monastery there for the Buddha and his community
-                                                  of followers.</p>
-                            </note>
-                                                </gloss>
-                    </item>
-                                        <item>
                         <gloss type="person" xml:id="UT22084-072-030-175">
                                                   <term type="translationMain">Bandé Yeshé Dé</term>
                                                   <term status="verified" xml:lang="Bo-Ltn" n="1">ban de ye shes sde </term>
@@ -1233,14 +1218,13 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="place" xml:id="UT22084-072-030-178">
-                                                  <term type="translationMain">Jetavana</term>
-                                                  <term status="verified" xml:lang="Bo-Ltn" n="1">rgyal bu rgyal byed
-                                                  kyi tshal </term>
-                                                  <term xml:lang="bo" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
-                                                  <term status="verified" xml:lang="Sa-Ltn">jetavana</term>
+                                                <gloss type="place" xml:id="UT22084-072-030-211">
+                                                        <term type="translationMain">Jetavana, Anāthapiṇḍada’s Park</term>
+                                                        <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                                                        <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                                                        <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                                                 </gloss>
-                    </item>
+                                        </item>
                                 </list>
                         </tei:div>
                 </back>
