--- a/translations/kangyur/placeholders/088-030_toh536,869-recollecting_the_common_essence_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/088-030_toh536,869-recollecting_the_common_essence_of_the_tathagatas.xml
@@ -12,13 +12,14 @@
                 <author role="translatorMain" xml:id="UT22084-088-030-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-030-2">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT22084-088-030-14">Nathaniel Rich</editor>
+                <editor role="copyEditor" xml:id="UT22084-088-030-23">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-088-030"/>
                 <date/>
             </publicationStmt>
@@ -84,6 +85,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-06T14:47:52.463Z" type="text-version" status="0.0.9" xml:id="UT22084-088-030-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-06T14:48:23.603Z" type="text-version" status="0.0.10" xml:id="UT22084-088-030-24">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-27T06:55:29.123Z" type="translation-status" status="2.d" xml:id="UT22084-088-030-25">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-27T06:55:29.123Z" type="text-version" status="0.0.11" xml:id="UT22084-088-030-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
