--- a/translations/kangyur/placeholders/088-031_toh537,870-recollecting_the_names_of_buddha_sikhin.xml
+++ b/translations/kangyur/placeholders/088-031_toh537,870-recollecting_the_names_of_buddha_sikhin.xml
@@ -14,13 +14,14 @@
                 <author role="translatorMain" xml:id="UT22084-088-031-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-031-2">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT22084-088-031-14">Nathaniel Rich</editor>
+                <editor role="copyEditor" xml:id="UT22084-088-031-23">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-088-031"/>
                 <date/>
             </publicationStmt>
@@ -86,6 +87,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-06T14:48:51.739Z" type="text-version" status="0.0.9" xml:id="UT22084-088-031-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-06T14:49:24.109Z" type="text-version" status="0.0.10" xml:id="UT22084-088-031-24">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-27T06:56:54.802Z" type="translation-status" status="2.d" xml:id="UT22084-088-031-25">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-27T06:56:54.802Z" type="text-version" status="0.0.11" xml:id="UT22084-088-031-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
