--- a/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
+++ b/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
@@ -12,14 +12,15 @@
                 <author role="translatorMain" xml:id="UT22084-088-032-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-032-2">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT22084-088-032-15">Nathaniel Rich</editor>
+                <editor role="copyEditor" xml:id="UT22084-088-032-24">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-088-032"/>
                 <date/>
             </publicationStmt>
@@ -88,6 +89,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-06T14:49:50.422Z" type="text-version" status="0.0.10" xml:id="UT22084-088-032-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-06T14:50:54.119Z" type="text-version" status="0.0.11" xml:id="UT22084-088-032-25">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-27T06:58:21.56Z" type="translation-status" status="2.d" xml:id="UT22084-088-032-26">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-27T06:58:21.56Z" type="text-version" status="0.0.12" xml:id="UT22084-088-032-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
