--- a/translations/kangyur/translations/066-012_toh254-the_sutra_of_dharmaketu.xml
+++ b/translations/kangyur/translations/066-012_toh254-the_sutra_of_dharmaketu.xml
@@ -19,9 +19,9 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn" key="toh254">Ārya­dharma­ketu­dhvaja­paripṛcchā­nāma­mahā­yāna­sūtra</title>
                 <title type="otherTitle" xml:lang="bo" key="toh254">chos kyi rgyal mtshan gyis zhus pa</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn" key="toh254">’phag pa chos kyi rgyal mtshan gyis zhus pa zhes bya ba theg pa chen po’i mdo</title>
-                <author role="translatorMain" xml:id="UT22084-066-012-198">Bhikṣuṇī Thubten Damcho and team</author>
+                <author role="translatorMain" xml:id="UT22084-066-012-198"/><!--Bhikṣuṇī Thubten Damcho and team</author>-->
                 <consultant role="projectManager" xml:id="UT22084-066-012-2">Bhikṣuṇī Thubten Damcho</consultant>
-                <author role="translatorEng" xml:id="UT22084-066-012-3">Bhikṣuṇī Thubten Damchocho</author>
+                <author role="translatorEng" xml:id="UT22084-066-012-3">Bhikṣuṇī Thubten Damcho</author>
                 <editor role="reviser" xml:id="UT22084-066-012-4">Norbu Samphel</editor>
                 <editor role="projectEditor" xml:id="UT22084-066-012-22">George FitzHerbert</editor>
                 <editor role="copyEditor" xml:id="UT22084-066-012-33">Dawn Collins</editor>
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-066-012-140">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.4 <date>2024</date>
+                <edition>v 1.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -200,6 +200,9 @@
                 </change>
                 <change who="#john" when="2024-05-31T17:18:11.611Z" type="text-version" status="1.0.4" xml:id="UT22084-066-012-200">
                     <desc>One minor edit.</desc>
+                </change>
+                <change who="#andre" when="2024-06-27T09:38:30.936Z" type="text-version" status="1.0.5" xml:id="UT22084-066-012-201">
+                    <desc>Jetavana, Anāthapiṇḍada’s Park</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -669,7 +672,7 @@
                         <gloss type="place" xml:id="UT22084-066-012-118">
                             <term type="translationMain">Prince Jeta’s Grove, Anātha­piṇḍada’s park</term>
                         <term xml:lang="Bo-Ltn" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
-                            <term xml:lang="bo" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
+                            <term xml:lang="bo" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         <term xml:lang="Sa-Ltn" status="verified" type="attestedDictionary">jetavanam anāthapiṇḍadasyārāmaḥ</term>
                         </gloss>
                     </item>
