--- a/translations/kangyur/placeholders/088-029_toh535,868-recollecting_the_names_of_candraprabha.xml
+++ b/translations/kangyur/placeholders/088-029_toh535,868-recollecting_the_names_of_candraprabha.xml
@@ -11,13 +11,14 @@
                 <author role="translatorMain" xml:id="UT22084-088-029-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-029-2">Bruno Galasek-Hul</author>
                 <editor role="projectEditor" xml:id="UT22084-088-029-14">Nathaniel Rich</editor>
+                <editor role="copyEditor" xml:id="UT22084-088-029-23">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-088-029"/>
                 <date/>
             </publicationStmt>
@@ -83,6 +84,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-06T14:46:57.235Z" type="text-version" status="0.0.9" xml:id="UT22084-088-029-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-06T14:47:26.696Z" type="text-version" status="0.0.10" xml:id="UT22084-088-029-24">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-27T09:38:44.54Z" type="translation-status" status="2.d" xml:id="UT22084-088-029-25">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-27T09:38:44.54Z" type="text-version" status="0.0.11" xml:id="UT22084-088-029-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
