--- a/translations/kangyur/translations/066-010_toh252-the_fourfold_accomplishment.xml
+++ b/translations/kangyur/translations/066-010_toh252-the_fourfold_accomplishment.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-066-010-229">Rory Lindsay, Dr.</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.11 <date>2023</date>
+                <edition>v 1.1.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -150,6 +150,9 @@
                 <change who="#martina-cotter" when="2023-11-27T18:29:21.387Z" type="text-version" status="1.1.11" xml:id="UT22084-066-010-259">
                     <desc>Added pending links.</desc>
                 </change>
+                <change who="#andre" when="2024-06-27T09:46:24.026Z" type="text-version" status="1.1.12" xml:id="UT22084-066-010-261">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -160,7 +163,7 @@
                 <milestone unit="chunk" xml:id="UT22084-066-010-1"/>
                 <p tid="2">
                     <title xml:lang="en">The Fourfold Accomplishment</title> revolves around a dialogue between the god Śrībhadra and the
-                    bodhisattva Mañjuśrī that takes place in the Jeta Grove at Śrāvastī. At Śrībhadra’s request, Mañjuśrī recalls a teaching that he
+                    bodhisattva Mañjuśrī that takes place in Jeta’s Grove at Śrāvastī. At Śrībhadra’s request, Mañjuśrī recalls a teaching that he
                     previously gave to Brahmā Śikhin on the practices of a bodhisattva. The teaching takes the form of a sequence of topics, each of
                     which has four components.</p>
             </div>
@@ -175,7 +178,7 @@
                 <head type="introduction" tid="8">Introduction</head>
                 <div type="section" xml:id="UT22084-066-010-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-066-010-4"/>
-                    <p tid="10">Set in Śrāvastī in the Jeta Grove where the Buddha Śākyamuni is accompanied by a large retinue of monks, bodhisattvas,
+                    <p tid="10">Set in Śrāvastī in Jeta’s Grove where the Buddha Śākyamuni is accompanied by a large retinue of monks, bodhisattvas,
                         and gods of the <term>desire</term> and form realms,<title xml:lang="en"> The Fourfold Accomplishment</title> revolves around
                         a dialogue between the bodhisattva Mañjuśrī and a god named Śrībhadra. The text opens with the god Śrībhadra asking Mañjuśrī
                         why he is still making offerings to the Buddha given his advanced spiritual progress. Mañjuśrī’s reply is that bodhisattvas should 
@@ -240,7 +243,7 @@
                         <ref cRef="F.61.a" type="folio" xml:id="UT22084-066-010-190"/> Homage to all buddhas and bodhisattvas.</p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-066-010-17"/>
-                    <p tid="24">Thus did I hear at one time. The Blessed One was in the Jeta Grove, in Anāthapiṇḍada’s park at Śrāvastī. He was
+                    <p tid="24">Thus did I hear at one time. The Blessed One was in Śrāvastī, in Jeta’s Grove, Anāthapiṇḍada’s park. He was
                         residing there with a great saṅgha of five hundred monks, one hundred thousand bodhisattvas who had all donned the great
                         armor, and the gods who inhabit the <term>desire</term> and form realms. There, the Blessed One, surrounded and revered by
                         this retinue of hundreds of thousands of beings, taught the Dharma.</p>
@@ -761,14 +764,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-066-010-129">
-                            <term type="translationMain">afflictions</term>
+                        <gloss xml:id="UT22084-066-010-129" type="term" mode="match">
+                            <term type="translationMain">affliction</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">kleśa</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">nyon mongs</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཉོན་མོངས།</term>
                             <note type="definition">
-                                <p>A type of mental imperfection; the most basic <term rend="ignore">afflictions</term> are
-                                attachment, aversion, and confusion.</p>
+                                <p>A type of mental imperfection; the most basic <term rend="ignore">afflictions</term> are attachment, aversion, and confusion.</p>
                             </note>
                         </gloss>
                     </item>
@@ -836,14 +838,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-066-010-135">
+                        <gloss xml:id="UT22084-066-010-135" type="term" mode="match">
                             <term type="translationMain">hearer</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śrāvaka</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">nyan thos</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཉན་ཐོས།</term>
-                            <note type="definition">
-                                <p>Someone who practices according to the Vehicle of the Hearers (those who hear the teachings from
-                                others); or, someone who heard the Dharma from the Buddha. See also “Lesser Vehicle.”</p>
+                            <note type="definition" rend="prepend">
+                                <p>See also “Lesser Vehicle.”</p>
                             </note>
                         </gloss>
                     </item>
@@ -1184,7 +1185,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">tri­sāhasra­mahā­sāhasra­loka­dhātu</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">stong gsum gyi stong chen po’i ’jig rten gyi khams</term>
                             <term xml:lang="bo" type="attestedSource" n="1">སྟོང་གསུམ་གྱི་སྟོང་ཆེན་པོའི་འཇིག་རྟེན་གྱི་ཁམས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The largest universe spoken of in Buddhist cosmology, consisting of one billion smaller world
                                 systems.</p>
                             </note>
@@ -1272,16 +1273,24 @@
                             </note>
                         </gloss>
                     </item>
-                    <item>
+                    <!--<item>
                         <gloss type="person" xml:id="UT22084-066-010-146">
                             <term type="translationMain">Anāthapiṇḍada</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">anāthapiṇḍada</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mgon med zas sbyin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མགོན་མེད་ཟས་སྦྱིན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>An important benefactor of the Buddha who donated the Jeta Grove outside of Śrāvastī to the
                                 Buddhist community.</p>
                             </note>
+                        </gloss>
+                    </item>-->
+                    <item>
+                        <gloss xml:id="UT22084-066-010-260" type="place" mode="match">
+                            <term type="translationMain">Jeta’s Grove, Anāthapiṇḍada’s Park</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         </gloss>
                     </item>
                     <item>
@@ -1424,7 +1433,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">tuṣita</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dga’ ldan</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དགའ་ལྡན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A divine world located in the <term>desire realm</term>. In Buddhist thought, this is where all
                                 future buddhas dwell prior to their complete awakening. </p>
                             </note>
@@ -1436,20 +1445,19 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">jambudvīpa</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">’dzam bu’i gling</term>
                             <term xml:lang="bo" type="attestedSource" n="1">འཛམ་བུའི་གླིང་།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The name of the southern continent in śrāvaka Buddhist cosmology.</p>
                             </note>
                         </gloss>
                     </item>
                     <item>
                         <gloss type="place" xml:id="UT22084-066-010-161">
-                            <term type="translationMain">Jeta Grove</term>
+                            <term type="translationMain">Jeta’s Grove</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">jetavana</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rgyal bu rgyal byed kyi tshal</term>
                             <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
                             <note type="definition">
-                                <p>The park outside of Śrāvastī, donated to the Buddha by Anāthapiṇḍada, where the Buddha is believed
-                                to have often taken up residence for the annual rains retreat.</p>
+                                <p>See “Jeta’s Grove, Anāthapiṇḍada’s Park.” </p>
                             </note>
                         </gloss>
                     </item>
