--- a/translations/kangyur/translations/066-009_toh251-the_noble_mahayana_sutra_on_the_four_factors.xml
+++ b/translations/kangyur/translations/066-009_toh251-the_noble_mahayana_sutra_on_the_four_factors.xml
@@ -6,7 +6,7 @@
                         <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Noble Mahāyāna Sūtra on
                                         the Four Factors</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­nāma­­mahā­yāna­­sūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Ārya­catur­dharmaka­nāma­mahā­yāna­sūtra</title>
                 <title type="mainTitle" xml:lang="bo">འཕགས་པ་ཆོས་བཞི་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">’phags pa chos bzhi pa
                                         zhes bya ba theg pa chen po’i mdo</title>
@@ -23,7 +23,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-066-009-274">John Canti</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.6 <date>2024</date>
+                <edition>v 1.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -196,6 +196,9 @@
                 <change who="#celso" when="2024-04-24T17:51:38.461Z" type="text-version" status="1.0.6" xml:id="UT22084-066-009-283">
                     <desc>Activated pending links</desc>
                 </change>
+                <change who="#andre" when="2024-06-27T09:51:14.514Z" type="text-version" status="1.0.7" xml:id="UT22084-066-009-285">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -207,7 +210,7 @@
                         <div type="summary">
                                 <head type="summary" tid="1">Summary</head>
                                 <milestone unit="chunk" xml:id="UT22084-066-009-1"/>
-                                <p tid="2">While residing in the Jeta Grove in Śrāvastī, the Buddha
+                                <p tid="2">While residing in the Jeta’s Grove in Śrāvastī, the Buddha
                                         explains to an assembly of monks and bodhisattvas four
                                         factors of the path that bodhisattvas must not abandon even
                                         at the cost of their lives: (1) the thought of awakening,
@@ -231,7 +234,7 @@
                                         <p tid="9">
                         <title xml:lang="en">The Noble Mahāyāna Sūtra on
                                                 the Four Factors</title> 
-                                                (<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­nāma­­mahā­yāna
+                                                (<title xml:lang="Sa-Ltn">Ārya­catur­dharmaka­nāma­mahā­yāna
 sūtra</title>) is
                                                 the third of three short sūtras with similar titles
                                                 (all referring to sets of four<foreign xml:lang="Sa-Ltn" type="term"> dharmas</foreign>
@@ -321,7 +324,7 @@ sūtra</title>) is
                                                 of the sūtra (Taishō 772<note place="end" xml:id="UT22084-066-009-16">
                                                         <foreign xml:lang="Zh-Ltn">Dasheng si fa jing</foreign> <foreign xml:lang="zh">大乘四法經</foreign> (<foreign xml:lang="Sa-Ltn">Caturdharmaka­sūtra</foreign>), Taishō 772 (<ref target="https://cbetaonline.dila.edu.tw/en/T0772">CBETA</ref>; <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T0772.html">SAT</ref>).</note> &amp; Taishō 773<note place="end" xml:id="UT22084-066-009-17">
                                                           <foreign xml:lang="Zh-Ltn">Fo shuo pusa xiuxing si fa jing</foreign>
-                                                                <foreign xml:lang="zh">佛說菩薩修行四法經</foreign> (<foreign xml:lang="Sa-Ltn">Catur­dharmaka­­sūtra</foreign>), Taishō
+                                                                <foreign xml:lang="zh">佛說菩薩修行四法經</foreign> (<foreign xml:lang="Sa-Ltn">Catur­dharmaka­sūtra</foreign>), Taishō
                                                   773 (<ref target="https://cbetaonline.dila.edu.tw/en/T0773">CBETA</ref>; <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T0773.html">SAT</ref>).</note>), both by Divākara and dated
                                                 to 680 <hi rend="small-caps">ce</hi> and 681 <hi rend="small-caps">ce</hi>.<note place="end" xml:id="UT22084-066-009-18"> See Skilling (2021),
                                                   pp. 200–1.</note> The sūtra and commentaries also
@@ -348,14 +351,14 @@ sūtra</title>) is
                                         <milestone unit="chunk" xml:id="UT22084-066-009-9"/>
                                         <p tid="13">There is a short commentary on this sūtra attributed to
                                                 Vasubandhu and preserved in Tibetan in the Tengyur, 
-                                                (*<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­vyākhyāna</title>, <title xml:lang="Bo-Ltn">’phags pa chos bzhi pa’i rnam
+                                                (*<title xml:lang="Sa-Ltn">Ārya­catur­dharmaka­vyākhyāna</title>, <title xml:lang="Bo-Ltn">’phags pa chos bzhi pa’i rnam
                                                         par bshad pa</title>, Toh 3990), which we have also translated,<note place="end" xml:id="UT22084-066-009-209">
                                                                 See Pearcey (2023b), <title xml:lang="en">
                                 <ref target="http://read.84000.co/translation/toh3990.html">An 
                                                                         Explanation of The Noble Sūtra on the Four Factors</ref>
                             </title>.</note> 
                                                 as well as a slightly longer commentary on this
-                                                commentary, attributed to Jñānadatta (: *<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­vyākhyāna­ṭīkā</title>, 
+                                                commentary, attributed to Jñānadatta (: *<title xml:lang="Sa-Ltn">Āryacatur­dharmaka­vyākhyāna­ṭīkā</title>, 
                                                 <title xml:lang="Bo-Ltn">’phags pa chos bzhi pa’i rgya cher bshad pa’i rgya cher ’grel
                                                 pa</title>, Toh 3990a).</p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-10"/>
@@ -369,7 +372,7 @@ sūtra</title>) is
                                                   p. 43, and Goodman (2016), p. 44.</note>
                                                 Prajñākaramati also cites the same line in his
                                                   <title xml:lang="en">Commentary on the Difficult
-                                                          Points of the Bodhicaryāvatāra</title> (<title xml:lang="Sa-Ltn">Bodhi­­caryāvatāra­­pañjikā</title>;<title xml:lang="Bo-Ltn"> byang chub kyi spyod pa la ’jug
+                                                          Points of the Bodhicaryāvatāra</title> (<title xml:lang="Sa-Ltn">Bodhi­caryāvatāra­pañjikā</title>;<title xml:lang="Bo-Ltn"> byang chub kyi spyod pa la ’jug
                                                           pa’i dka’ ’grel</title>, Toh 3872).<ref rend="pending" target="http://read.84000.co/translation/toh3872.html"/>
                         <note place="end" xml:id="UT22084-066-009-12"> Prajñākaramati,
                                                   107a.5.</note> Vimalamitra refers to the fourth
@@ -423,7 +426,7 @@ sūtra</title>) is
                                         <lb/>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-226"/>
                                         <p tid="26">Thus did I hear at one time. The Buddha was
-                                                residing in Śrāvastī at Jeta’s Grove,
+                                                residing in Śrāvastī, in Jeta’s Grove,
                                                 Anāthapiṇḍada’s park, together with a great
                                                 community of monks, consisting of 1,250 monks, and a
                                                 great assembly of bodhisattvas. At that time, the
@@ -524,7 +527,7 @@ sūtra</title>) is
                                         <head type="section" tid="43">Tibetan Texts</head>
                                         <bibl xml:id="UT22084-066-009-44">
                         <title xml:lang="Bo-Ltn">’phags pa chos bzhi pa zhes bya ba theg pa chen
-                                                po’i mdo</title> (<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­nāma­­mahā­yāna­­sūtra</title>). Toh
+                                                po’i mdo</title> (<title xml:lang="Sa-Ltn">Ārya­catur­dharmaka­nāma­mahā­yāna­sūtra</title>). Toh
                                                 251, Degé Kangyur vol. 66 (mdo sde, za), folios
                                                 60.b–61.a.</bibl>
                                         <bibl xml:id="UT22084-066-009-45">
@@ -552,7 +555,7 @@ sūtra</title>) is
                                                 294.b–310.a.</bibl>
                                         <bibl xml:id="UT22084-066-009-49">Jñānadatta. <title xml:lang="Bo-Ltn">’phags pa chos bzhi pa’i rgya
                                                   cher bshad pa’i rgya cher ’grel pa</title>
-                                                (*<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­vyākhyāna­­ṭīkā</title>). Toh
+                                                (*<title xml:lang="Sa-Ltn">Ārya­catur­dharmaka­vyākhyāna­ṭīkā</title>). Toh
                                                 3990a, Degé Tengyur vol. 113 (mdo ’grel, ngi),
                                                 folios 67.a–71.b.</bibl>
                                         <bibl xml:id="UT22084-066-009-50">Longchen Rabjam (klong
@@ -563,7 +566,7 @@ sūtra</title>) is
                                                 Beijing: krung go’i bod rig pa dpe skrun khang,
                                                 2009. Vol. 13: 68–467. BDRC W1KG4884.</bibl>
                                         <bibl xml:id="UT22084-066-009-52">Prajñākaramati. <title xml:lang="Bo-Ltn">byang chub kyi spyod pa la ’jug
-                                                pa’i dka’ ’grel</title> (<title xml:lang="Sa-Ltn">Bodhi­­caryāvatāra­­pañjikā</title>) Toh 3872, Degé
+                                                pa’i dka’ ’grel</title> (<title xml:lang="Sa-Ltn">Bodhi­caryāvatāra­pañjikā</title>) Toh 3872, Degé
                                                 Tengyur vol. 105 (dbu ma, la), folios
                                                 41.b–288.a.</bibl>
                                         <bibl xml:id="UT22084-066-009-53">Śāntideva. <title xml:lang="Bo-Ltn">bslab pa kun las btus pa</title>
@@ -571,7 +574,7 @@ sūtra</title>) is
                                                 Toh 3940, Degé Tengyur vol. 111 (dbu ma, khi),
                                                 folios 3.a–194.b.</bibl>
                                         <bibl xml:id="UT22084-066-009-54">Vasubandhu. <title xml:lang="Bo-Ltn">’phags pa chos bzhi pa’i rnam
-                                                par bshad pa</title> (*<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­vyākhyāna</title>). Toh 3990,
+                                                par bshad pa</title> (*<title xml:lang="Sa-Ltn">Ārya­catur­dharmaka­vyākhyāna</title>). Toh 3990,
                                                 Degé Tengyur vol. 113 (mdo ’grel, ngi), folios
                                                 66.a–66.b.</bibl>
                                         <bibl xml:id="UT22084-066-009-55">Vimalamitra. <title xml:lang="Bo-Ltn">rim gyis ’jug pa’i sgom
@@ -621,20 +624,20 @@ sūtra</title>) is
                                                 <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh249.html">The Sūtra Teaching the Four
                                                           Factors</ref>
-                        </title> (<title xml:lang="Sa-Ltn">Catur­dharma­­nirdeśa­­sūtra</title>, Toh 249). 84000:
+                        </title> (<title xml:lang="Sa-Ltn">Catur­dharma­nirdeśa­sūtra</title>, Toh 249). 84000:
                                                 Translating the Words of the Buddha, 2019.</bibl>
                                         <bibl xml:id="UT22084-066-009-261">————, trans. (2023a).
                                                 <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh250.html">The Four Factors</ref>
                         </title> 
-                                                (<title xml:lang="Sa-Ltn">Catur­dharmaka­­sūtra</title>, Toh 250). 84000: Translating the
+                                                (<title xml:lang="Sa-Ltn">Catur­dharmaka­sūtra</title>, Toh 250). 84000: Translating the
                                                 Words of the Buddha, 2023.</bibl>
                                         <bibl xml:id="UT22084-066-009-263">————, trans. (2023b).
                                                 <title xml:lang="en">
                             <ref target="http://read.84000.co/translation/toh3990.html">An 
                                                         Explanation of The Noble Sūtra on the Four Factors</ref>
                         </title> 
-                                                (*<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­vyākhyāna</title>, Toh 3990). 84000: Translating the
+                                                (*<title xml:lang="Sa-Ltn">Ārya­catur­dharmaka­vyākhyāna</title>, Toh 3990). 84000: Translating the
                                                 Words of the Buddha, 2023.</bibl>
                                         <bibl xml:id="UT22084-066-009-162">Skilling, Peter. <title xml:lang="en">Questioning the Buddha: A Selection
                                                   of Twenty-Five Sutras</title>. Somerville, MA:
@@ -726,14 +729,12 @@ sūtra</title>) is
                         </gloss>
                     </item>
                                         <item>
-                        <gloss xml:id="UT22084-066-009-73" type="place" mode="match">
-                            <term type="translationMain">Jeta Grove</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">jetavana</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
-                            <note type="definition" rend="override">
-                                <p>A grove owned by Prince Jeta in Śrāvastī, the capital of the kingdom of Kośala. It was bought by Anāthapiṇḍada and became a monastery in which the Buddha often stayed during rainy seasons, and hence was a setting for many sūtras.</p>
-                            </note>
+                        <gloss xml:id="UT22084-066-009-284" type="place" mode="match">
+                            <term type="translationMain">Jeta’s Grove, Anāthapiṇḍada’s Park</term>
+                            <term type="translationAlternative">Jeta’s Grove</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         </gloss>
                     </item>
                                 </list>
